# internal/interfaces/http/router.go
@@ -108,6 +108,9 @@ func RouterSetup(router *gin.Engine) {
 	studio.DELETE("/collections/:collectionId/items/:articleId", api.RemoveStudioCollectionItem)
 	studio.PUT("/collections/:collectionId/order", api.ReorderStudioCollection)
 	studio.PUT("/collections/:collectionId/comments/:commentId/pin", api.PinCollectionComment)
+	studio.GET("/collections/:collectionId/comments", api.ListOwnedCollectionComments)
+	studio.POST("/collections/:collectionId/comments/batch", api.BatchModerateCollectionComments)
+	studio.POST("/collections/:collectionId/comments/restore", api.RestoreOwnedCollectionComments)
 	studio.DELETE("/collections/:collectionId/comments/:commentId", api.DeleteOwnedCollectionComment)
 	studio.GET("/series", api.ListStudioSeries)
 	studio.GET("/series/:seriesId", api.GetStudioSeries)
